--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,7 @@ cbc = "0.1.2"
 scrypt = "0.11.0"
 rand = "0.9.2"
 hex = "0.4.3"
-base64ct = "=1.6.0" # Keep this pinned to avoid Rust 2024 requirement
+base64ct = "1.6.0"
 block-padding = "0.3.3"
 
 
